<resources>
    <string name="app_name" translatable="false">Scaling Adventure</string>

    <string name="navigation_drawer_open">Открыть панель навигации</string>
    <string name="navigation_drawer_close">Закрыть панель навигации</string>

    <string name="name">Виталий Заянковский</string>
    <string name="github" translatable="false">Github: Zayankovsky</string>
    <string name="email" translatable="false">zayankovsky@gmail.com</string>

    <string name="gallery">Галерея</string>
    <string name="fotki">ЯФотки</string>
    <string name="cache">Кэш</string>

    <string name="more">Ещё</string>

    <string name="camera">Сделать фотографию</string>
    <string name="review">Написать отзыв</string>
    <string name="settings">Настройки</string>

    <string name="save">Сохранить в галерее</string>
    <string name="browser">Открыть в браузере</string>
    <string name="open">Открыть с помощью …</string>
    <string name="share">Отправить</string>

    <string name="image">Изображение</string>
    <string name="thumbnail">Миниатюра</string>

    <string name="detail_text">Автор: %1$s\nОпубликовано: %2$s</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_title_theme">Тема оформления</string>
    <string name="pref_light_theme">Светлая тема</string>
    <string name="pref_dark_theme">Тёмная тема</string>
    <string-array name="pref_theme_titles">
        <item>@string/pref_light_theme</item>
        <item>@string/pref_dark_theme</item>
    </string-array>
    <string-array name="pref_theme_values" translatable="false">
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string name="pref_title_column_count">Число столбцов</string>
    <string name="pref_2_columns">2 столбца</string>
    <string name="pref_3_columns">3 столбца</string>
    <string name="pref_4_columns">4 столбца</string>
    <string name="pref_5_columns">5 столбцов</string>
    <string name="pref_6_columns">6 столбцов</string>
    <string-array name="pref_column_count_titles">
        <item>@string/pref_2_columns</item>
        <item>@string/pref_3_columns</item>
        <item>@string/pref_4_columns</item>
        <item>@string/pref_5_columns</item>
        <item>@string/pref_6_columns</item>
    </string-array>
    <string-array name="pref_column_count_values" translatable="false">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="pref_title_batch_size">Количество загружаемых за раз картинок</string>
    <string name="pref_5_images">5 картинок</string>
    <string name="pref_10_images">10 картинок</string>
    <string name="pref_15_images">15 картинок</string>
    <string name="pref_20_images">20 картинок</string>
    <string name="pref_25_images">25 картинок</string>
    <string name="pref_30_images">30 картинок</string>
    <string name="pref_35_images">35 картинок</string>
    <string name="pref_40_images">40 картинок</string>
    <string name="pref_45_images">45 картинок</string>
    <string name="pref_50_images">50 картинок</string>
    <string-array name="pref_batch_size_titles">
        <item>@string/pref_5_images</item>
        <item>@string/pref_10_images</item>
        <item>@string/pref_15_images</item>
        <item>@string/pref_20_images</item>
        <item>@string/pref_25_images</item>
        <item>@string/pref_30_images</item>
        <item>@string/pref_35_images</item>
        <item>@string/pref_40_images</item>
        <item>@string/pref_45_images</item>
        <item>@string/pref_50_images</item>
    </string-array>
    <string-array name="pref_batch_size_values" translatable="false">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
    </string-array>

    <string name="pref_title_memory_cache_size">Размер кэш-памяти</string>
    <string name="pref_0_mb" translatable="false">0 MB</string>
    <string name="pref_5_mb" translatable="false">5 MB</string>
    <string name="pref_10_mb" translatable="false">10 MB</string>
    <string name="pref_15_mb" translatable="false">15 MB</string>
    <string name="pref_20_mb" translatable="false">20 MB</string>
    <string name="pref_25_mb" translatable="false">25 MB</string>
    <string name="pref_30_mb" translatable="false">30 MB</string>
    <string name="pref_35_mb" translatable="false">35 MB</string>
    <string name="pref_40_mb" translatable="false">40 MB</string>
    <string name="pref_45_mb" translatable="false">45 MB</string>
    <string name="pref_50_mb" translatable="false">50 MB</string>
    <string name="pref_55_mb" translatable="false">55 MB</string>
    <string name="pref_60_mb" translatable="false">60 MB</string>
    <string name="pref_65_mb" translatable="false">65 MB</string>
    <string name="pref_70_mb" translatable="false">70 MB</string>
    <string name="pref_75_mb" translatable="false">75 MB</string>
    <string name="pref_80_mb" translatable="false">80 MB</string>
    <string name="pref_85_mb" translatable="false">85 MB</string>
    <string name="pref_90_mb" translatable="false">90 MB</string>
    <string name="pref_95_mb" translatable="false">95 MB</string>
    <string name="pref_100_mb" translatable="false">100 MB</string>
    <string-array name="pref_memory_cache_size_titles">
        <item>@string/pref_0_mb</item>
        <item>@string/pref_5_mb</item>
        <item>@string/pref_10_mb</item>
        <item>@string/pref_15_mb</item>
        <item>@string/pref_20_mb</item>
        <item>@string/pref_25_mb</item>
        <item>@string/pref_30_mb</item>
        <item>@string/pref_35_mb</item>
        <item>@string/pref_40_mb</item>
        <item>@string/pref_45_mb</item>
        <item>@string/pref_50_mb</item>
        <item>@string/pref_55_mb</item>
        <item>@string/pref_60_mb</item>
        <item>@string/pref_65_mb</item>
        <item>@string/pref_70_mb</item>
        <item>@string/pref_75_mb</item>
        <item>@string/pref_80_mb</item>
        <item>@string/pref_85_mb</item>
        <item>@string/pref_90_mb</item>
        <item>@string/pref_95_mb</item>
        <item>@string/pref_100_mb</item>
    </string-array>
    <string-array name="pref_memory_cache_size_values" translatable="false">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>100</item>
    </string-array>

    <string name="pref_description_keep_disk_cache">Дисковый кэш не будет удаляться при старте приложения</string>
    <string name="pref_description_clear_disk_cache">Дисковый кэш будет удаляться при старте приложения</string>
    <string name="pref_title_clear_disk_cache">Удаление дискового кэша</string>
</resources>
