<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_fotki"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/fotki" />
        <item
            android:id="@+id/nav_cache"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/cache" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/rate" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
