<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="theme"
        android:title="@string/pref_title_theme"
        android:defaultValue="light"
        android:entries="@array/pref_theme_titles"
        android:entryValues="@array/pref_theme_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="column_count"
        android:title="@string/pref_title_column_count"
        android:defaultValue="4"
        android:entries="@array/pref_column_count_titles"
        android:entryValues="@array/pref_column_count_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="batch_size"
        android:title="@string/pref_title_batch_size"
        android:defaultValue="20"
        android:entries="@array/pref_batch_size_titles"
        android:entryValues="@array/pref_batch_size_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="memory_cache_size"
        android:title="@string/pref_title_memory_cache_size"
        android:defaultValue="50"
        android:entries="@array/pref_memory_cache_size_titles"
        android:entryValues="@array/pref_memory_cache_size_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="clear_disk_cache"
        android:summaryOff="@string/pref_description_keep_disk_cache"
        android:summaryOn="@string/pref_description_clear_disk_cache"
        android:title="@string/pref_title_clear_disk_cache" />

</PreferenceScreen>
